--- a/Peppermint/LoginTableViewCell.xib
+++ b/Peppermint/LoginTableViewCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9059" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="14F1509" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -23,20 +23,17 @@
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_google" translatesAutoresizingMaskIntoConstraints="NO" id="qvI-MI-mRf">
                                 <rect key="frame" x="0.0" y="0.0" width="20" height="26"/>
-                                <animations/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="20" id="Fg0-6c-oor"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="_Log In with google" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PWK-q9-xOg">
                                 <rect key="frame" x="26" y="0.0" width="148" height="26"/>
-                                <animations/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="PWK-q9-xOg" firstAttribute="leading" secondItem="qvI-MI-mRf" secondAttribute="trailing" constant="6" id="7t8-sn-Qgq"/>
@@ -50,7 +47,6 @@
                     </view>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1xJ-Ye-BDH">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="41"/>
-                        <animations/>
                         <connections>
                             <action selector="buttonReleasedInside:" destination="Dk8-zA-rfK" eventType="touchUpInside" id="rNN-Lp-0XO"/>
                             <action selector="buttonReleasedOutside:" destination="Dk8-zA-rfK" eventType="touchDragExit" id="NMJ-0Y-dyF"/>
@@ -63,7 +59,6 @@
                         </connections>
                     </button>
                 </subviews>
-                <animations/>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="1xJ-Ye-BDH" secondAttribute="trailing" id="6fJ-2X-UWU"/>
                     <constraint firstAttribute="bottom" secondItem="1xJ-Ye-BDH" secondAttribute="bottom" id="8rQ-IB-D0f"/>
@@ -77,7 +72,6 @@
                     <constraint firstItem="1xJ-Ye-BDH" firstAttribute="top" secondItem="qUv-Q8-Lkg" secondAttribute="top" id="pXk-aC-aN6"/>
                 </constraints>
             </tableViewCellContentView>
-            <animations/>
             <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
             <connections>
                 <outlet property="borderView" destination="6LV-j9-Ub1" id="EIP-Mm-mRV"/>
