--- a/Peppermint/LoginTextFieldTableViewCell.xib
+++ b/Peppermint/LoginTextFieldTableViewCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9059" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="14F1509" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
@@ -17,25 +17,21 @@
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5gX-VP-NzC">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="41"/>
-                        <animations/>
                         <color key="backgroundColor" red="0.27058823529411763" green="0.67843137254901964" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="7Iz-8r-ieW">
                         <rect key="frame" x="16" y="7" width="296" height="28"/>
-                        <animations/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <textInputTraits key="textInputTraits"/>
                     </textField>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="N8W-Qc-Cue" userLabel="SeperatorView">
                         <rect key="frame" x="0.0" y="40" width="320" height="1"/>
-                        <animations/>
                         <color key="backgroundColor" red="0.23529411759999999" green="0.61568627450000002" blue="0.54901960780000003" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="1" id="GGW-S9-0pR"/>
                         </constraints>
                     </view>
                 </subviews>
-                <animations/>
                 <constraints>
                     <constraint firstItem="7Iz-8r-ieW" firstAttribute="top" secondItem="hHT-c7-BsO" secondAttribute="top" constant="7" id="7ah-9s-z0e"/>
                     <constraint firstAttribute="bottom" secondItem="5gX-VP-NzC" secondAttribute="bottom" id="GOQ-Xw-5mh"/>
@@ -50,7 +46,6 @@
                     <constraint firstItem="5gX-VP-NzC" firstAttribute="leading" secondItem="hHT-c7-BsO" secondAttribute="leading" id="yjw-sJ-X8u"/>
                 </constraints>
             </tableViewCellContentView>
-            <animations/>
             <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
             <connections>
                 <outlet property="coverView" destination="5gX-VP-NzC" id="heA-QK-Qe2"/>
